--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-error-boundary": "^3.1.4",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
